enum-ptr-test/tests/fail/repr.stderr
error: EnumPtr requires `#[repr(C, usize)]`
 --> tests/fail/repr.rs:6:6
  |
6 | enum Foo<'a, 'b> {
  |      ^^^
